Fix file selection and improve UI

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
         <h1>视频格式转换工具</h1>
         <div class="converter-box">
             <div class="upload-section">
-                <input type="file" id="fileInput" accept="video/*,.gif" multiple />
+                <input type="file" id="fileInput" accept="video/*,image/gif" multiple />
                 <div class="drop-zone">
                     <p>拖拽文件到这里或点击选择文件（最多10个文件）</p>
+                    <p class="file-types">支持的格式：MP4, WebM, GIF 等视频格式</p>
                 </div>
             </div>
             
